// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Helpers/Margins All-Round Margins 1`] = `
<div
  dir="ltr"
>
  

  <style>
    
    div.demo {
        display: flex;
        width: fit-content;
        background: #69ADF8;
    }
    .demo div {
        height: 4rem;
        width: 8rem;
        background: #E2EEFF;
    }

  </style>
  


  <h3>
    All-Round Tiny (0.5rem)
  </h3>
  

  <div
    class="demo"
  >
    
    
    <div
      class="sap-margin-tiny"
    />
    

  </div>
  

  <br />
  

  <h3>
    All-Round Small (1rem)
  </h3>
  

  <div
    class="demo"
  >
    
    
    <div
      class="sap-margin-small"
    />
    

  </div>
  

  <br />
  

  <h3>
    All-Round Medium (2rem)
  </h3>
  

  <div
    class="demo"
  >
    
    
    <div
      class="sap-margin-medium"
    />
    

  </div>
  

  <br />
  

  <h3>
    All-Round Large (3rem)
  </h3>
  

  <div
    class="demo"
  >
    
    
    <div
      class="sap-margin-large"
    />
    

  </div>
  

  <br />
  

</div>
`;

exports[`Storyshots Helpers/Margins Begin Margins 1`] = `
<div
  dir="ltr"
>
  

  <style>
    
    div.demo {
        display: flex;
        width: fit-content;
        background: #69ADF8;
    }
    .demo div {
        height: 4rem;
        width: 8rem;
        background: #E2EEFF;
    }

  </style>
  


  <h3>
    Begin Tiny (0.5rem)
  </h3>
  

  <div
    class="demo"
  >
    
    
    <div
      class="sap-margin-begin-tiny"
    />
    

  </div>
  

  <br />
  

  <h3>
    Begin Small (1rem)
  </h3>
  

  <div
    class="demo"
  >
    
    
    <div
      class="sap-margin-begin-small"
    />
    

  </div>
  

  <br />
  

  <h3>
    Begin Medium (2rem)
  </h3>
  

  <div
    class="demo"
  >
    
    
    <div
      class="sap-margin-begin-medium"
    />
    

  </div>
  

  <br />
  

  <h3>
    Begin Large (3rem)
  </h3>
  

  <div
    class="demo"
  >
    
    
    <div
      class="sap-margin-begin-large"
    />
    

  </div>
  

  <br />
  

</div>
`;

exports[`Storyshots Helpers/Margins Bottom Margins 1`] = `
<div
  dir="ltr"
>
  

  <style>
    
    div.demo {
        display: flex;
        width: fit-content;
        background: #69ADF8;
    }
    .demo div {
        height: 4rem;
        width: 8rem;
        background: #E2EEFF;
    }

  </style>
  


  <h3>
    Bottom Tiny (0.5rem)
  </h3>
  

  <div
    class="demo"
  >
    
    
    <div
      class="sap-margin-bottom-tiny"
    />
    

  </div>
  

  <br />
  

  <h3>
    Bottom Small (1rem)
  </h3>
  

  <div
    class="demo"
  >
    
    
    <div
      class="sap-margin-bottom-small"
    />
    

  </div>
  

  <br />
  

  <h3>
    Bottom Medium (2rem)
  </h3>
  

  <div
    class="demo"
  >
    
    
    <div
      class="sap-margin-bottom-medium"
    />
    

  </div>
  

  <br />
  

  <h3>
    Bottom Large (3rem)
  </h3>
  

  <div
    class="demo"
  >
    
    
    <div
      class="sap-margin-bottom-large"
    />
    

  </div>
  

  <br />
  

</div>
`;

exports[`Storyshots Helpers/Margins End Margins 1`] = `
<div
  dir="ltr"
>
  

  <style>
    
    div.demo {
        display: flex;
        width: fit-content;
        background: #69ADF8;
    }
    .demo div {
        height: 4rem;
        width: 8rem;
        background: #E2EEFF;
    }

  </style>
  


  <h3>
    End Tiny (0.5rem)
  </h3>
  

  <div
    class="demo"
  >
    
    
    <div
      class="sap-margin-end-tiny"
    />
    

  </div>
  

  <br />
  

  <h3>
    End Small (1rem)
  </h3>
  

  <div
    class="demo"
  >
    
    
    <div
      class="sap-margin-end-small"
    />
    

  </div>
  

  <br />
  

  <h3>
    End Medium (2rem)
  </h3>
  

  <div
    class="demo"
  >
    
    
    <div
      class="sap-margin-end-medium"
    />
    

  </div>
  

  <br />
  

  <h3>
    End Large (3rem)
  </h3>
  

  <div
    class="demo"
  >
    
    
    <div
      class="sap-margin-end-large"
    />
    

  </div>
  

  <br />
  

</div>
`;

exports[`Storyshots Helpers/Margins Horizontal Margins 1`] = `
<div
  dir="ltr"
>
  

  <style>
    
    div.demo {
        display: flex;
        width: fit-content;
        background: #69ADF8;
    }
    .demo div {
        height: 4rem;
        width: 8rem;
        background: #E2EEFF;
    }

  </style>
  


  <h3>
    Horizontal Tiny (0.5rem)
  </h3>
  

  <div
    class="demo"
  >
    
    
    <div
      class="sap-margin-x-tiny"
    />
    

  </div>
  

  <br />
  

  <h3>
    Horizontal Small (1rem)
  </h3>
  

  <div
    class="demo"
  >
    
    
    <div
      class="sap-margin-x-small"
    />
    

  </div>
  

  <br />
  

  <h3>
    Horizontal Medium (2rem)
  </h3>
  

  <div
    class="demo"
  >
    
    
    <div
      class="sap-margin-x-medium"
    />
    

  </div>
  

  <br />
  

  <h3>
    Horizontal Large (3rem)
  </h3>
  

  <div
    class="demo"
  >
    
    
    <div
      class="sap-margin-x-large"
    />
    

  </div>
  

  <br />
  

</div>
`;

exports[`Storyshots Helpers/Margins Negative Margins 1`] = `
<div
  dir="ltr"
>
  

  <style>
    
    div.demo {
        display: flex;
        width: fit-content;
        background: #69ADF8;
    }
    .demo div {
        height: 4rem;
        width: 8rem;
        background: #E2EEFF;
    }

  </style>
  


  <h3>
    Horizontal Negative Tiny (-0.5rem)
  </h3>
  

  <div
    class="demo"
  >
    
    
    <div
      class="sap-margin-tiny-negative"
    />
    

  </div>
  

  <br />
  

  <h3>
    Horizontal Negative Small (-1rem)
  </h3>
  

  <div
    class="demo"
  >
    
    
    <div
      class="sap-margin-small-negative"
    />
    

  </div>
  

  <br />
  

  <h3>
    Horizontal Negative Medium (-2rem)
  </h3>
  

  <div
    class="demo"
  >
    
    
    <div
      class="sap-margin-medium-negative"
    />
    

  </div>
  

  <br />
  

  <h3>
    Horizontal Negative Large (-3rem)
  </h3>
  

  <div
    class="demo"
  >
    
    
    <div
      class="sap-margin-large-negative"
    />
    

  </div>
  

  <br />
  

</div>
`;

exports[`Storyshots Helpers/Margins Responsive Margins 1`] = `
<div
  dir="ltr"
>
  

  <style>
    
    div.demo {
        display: flex;
        width: fit-content;
        background: #69ADF8;
    }
    .demo div {
        height: 4rem;
        width: 8rem;
        background: #E2EEFF;
    }

  </style>
  


  <div
    class="demo"
  >
    
    
    <div
      class="sap-margin-responsive"
    />
    

  </div>
  

</div>
`;

exports[`Storyshots Helpers/Margins Top Margins 1`] = `
<div
  dir="ltr"
>
  

  <style>
    
    div.demo {
        display: flex;
        width: fit-content;
        background: #69ADF8;
    }
    .demo div {
        height: 4rem;
        width: 8rem;
        background: #E2EEFF;
    }

  </style>
  


  <h3>
    Top Tiny (0.5rem)
  </h3>
  

  <div
    class="demo"
  >
    
    
    <div
      class="sap-margin-top-tiny"
    />
    

  </div>
  

  <br />
  

  <h3>
    Top Small (1rem)
  </h3>
  

  <div
    class="demo"
  >
    
    
    <div
      class="sap-margin-top-small"
    />
    

  </div>
  

  <br />
  

  <h3>
    Top Medium (2rem)
  </h3>
  

  <div
    class="demo"
  >
    
    
    <div
      class="sap-margin-top-medium"
    />
    

  </div>
  

  <br />
  

  <h3>
    Top Large (3rem)
  </h3>
  

  <div
    class="demo"
  >
    
    
    <div
      class="sap-margin-top-large"
    />
    

  </div>
  

  <br />
  

</div>
`;

exports[`Storyshots Helpers/Margins Vertical Margins 1`] = `
<div
  dir="ltr"
>
  

  <style>
    
    div.demo {
        display: flex;
        width: fit-content;
        background: #69ADF8;
    }
    .demo div {
        height: 4rem;
        width: 8rem;
        background: #E2EEFF;
    }

  </style>
  


  <h3>
    Vertical Tiny (0.5rem)
  </h3>
  

  <div
    class="demo"
  >
    
    
    <div
      class="sap-margin-y-tiny"
    />
    

  </div>
  

  <br />
  

  <h3>
    Vertical Small (1rem)
  </h3>
  

  <div
    class="demo"
  >
    
    
    <div
      class="sap-margin-y-small"
    />
    

  </div>
  

  <br />
  

  <h3>
    Vertical Medium (2rem)
  </h3>
  

  <div
    class="demo"
  >
    
    
    <div
      class="sap-margin-y-medium"
    />
    

  </div>
  

  <br />
  

  <h3>
    Vertical Large (3rem)
  </h3>
  

  <div
    class="demo"
  >
    
    
    <div
      class="sap-margin-y-large"
    />
    

  </div>
  

  <br />
  

</div>
`;
